--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
     "@pinia-plugin-persistedstate/nuxt": "^1.1.2",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
+    "autoprefixer": "^10.4.18",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-vue": "^9.17.0",
     "husky": "^8.0.0",
     "lint-staged": "^14.0.1",
     "nuxt": "^3.7.1",
-    "prettier": "^3.0.3"
+    "postcss": "^8.4.37",
+    "prettier": "^3.0.3",
+    "tailwindcss": "^3.4.1"
   },
   "volta": {
     "node": "20.6.1"
